# OC_projet_2

./: .gitignore  README.md  pyproject.toml
notebooks/: Hugging Face Cloth Segmentation.ipynb  projet2.py  rapport.ipynb
src/: config.py  dataset.py  features.py  plots.py
src/modeling/: predict.py
