[tool.poetry]
name = "oc-projet-2"
version = "0.1.0"
description = "Projet Data Science OpenClassrooms"
authors = ["Pierre Pltn"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
scipy = "*"
jupyter = "*"
ipykernel = "*"
requests = "*"
Pillow = "*"
joblib = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
